Добавил возможность сохранения и парсинга веркторов и матриц. Добавил MMPP поток

--- a/Diplom/Diplom.csproj
+++ b/Diplom/Diplom.csproj
@@ -93,8 +93,11 @@
     <Compile Include="Data\Exeption\CreateModelException.cs" />
     <Compile Include="Data\AbstractStorable.cs" />
     <Compile Include="Application\AppData.cs" />
-    <Compile Include="Data\JsonUtils.cs" />
-    <Compile Include="Data\Utils.cs" />
+    <Compile Include="Data\Exeption\CreateModelWarning.cs" />
+    <Compile Include="Data\Utilities\JsonUtils.cs" />
+    <Compile Include="Data\Process\MMPP.cs" />
+    <Compile Include="Data\Utilities\Matrix.cs" />
+    <Compile Include="Data\Utilities\Utils.cs" />
     <Compile Include="Data\Process\AbstractProcess.cs" />
     <Compile Include="Data\Process\PoissonProcess.cs" />
     <Compile Include="Data\Random\AbstractRandomValue.cs" />
