--- a/Diplom/Diplom.csproj
+++ b/Diplom/Diplom.csproj
@@ -94,6 +94,9 @@
     <Compile Include="Data\AbstractStorable.cs" />
     <Compile Include="Application\AppData.cs" />
     <Compile Include="Data\Exeption\CreateModelWarning.cs" />
+    <Compile Include="Data\Process\MAP.cs" />
+    <Compile Include="Data\Random\RandomBetaValue.cs" />
+    <Compile Include="Data\Random\RandomGammaValue.cs" />
     <Compile Include="Data\Utilities\JsonUtils.cs" />
     <Compile Include="Data\Process\MMPP.cs" />
     <Compile Include="Data\Utilities\Matrix.cs" />
