Детерминированный процесс и величина

--- a/Diplom/Diplom.csproj
+++ b/Diplom/Diplom.csproj
@@ -94,19 +94,21 @@
     <Compile Include="Data\AbstractStorable.cs" />
     <Compile Include="Application\AppData.cs" />
     <Compile Include="Data\Exeption\CreateModelWarning.cs" />
+    <Compile Include="Data\Process\DeterminateProcess.cs" />
     <Compile Include="Data\Process\MAP.cs" />
-    <Compile Include="Data\Random\RandomBetaValue.cs" />
-    <Compile Include="Data\Random\RandomGammaValue.cs" />
+    <Compile Include="Data\Value\DeterminateValue.cs" />
+    <Compile Include="Data\Value\RandomBetaValue.cs" />
+    <Compile Include="Data\Value\RandomGammaValue.cs" />
     <Compile Include="Data\Utilities\JsonUtils.cs" />
     <Compile Include="Data\Process\MMPP.cs" />
     <Compile Include="Data\Utilities\Utils.cs" />
     <Compile Include="Data\Process\AbstractProcess.cs" />
     <Compile Include="Data\Process\PoissonProcess.cs" />
-    <Compile Include="Data\Random\AbstractRandomValue.cs" />
-    <Compile Include="Data\Random\RandomBasicValue.cs" />
-    <Compile Include="Data\Random\RandomExponentialValue.cs" />
-    <Compile Include="Data\Random\RandomNormalValue.cs" />
-    <Compile Include="Data\Random\RandomUniformValue.cs" />
+    <Compile Include="Data\Value\AbstractValue.cs" />
+    <Compile Include="Data\Value\RandomBasicValue.cs" />
+    <Compile Include="Data\Value\RandomExponentialValue.cs" />
+    <Compile Include="Data\Value\RandomNormalValue.cs" />
+    <Compile Include="Data\Value\RandomUniformValue.cs" />
     <Compile Include="Controller\BaseController.cs" />
     <Compile Include="GUI\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
